# mailtrace

./: .deepsource.toml  .gitignore  LICENSE  README.md  config.yaml.sample  flake.nix  justfile  pyproject.toml  test.dot
demo/docker/: README.md  config.yaml  docker-compose.yml  gen_traffic.sh  send_bulk_emails.py  send_bulk_emails.sh  ssh_config  ssh_config_loghost  static_gen_traffic.sh
demo/docker/loghost/: Dockerfile  entrypoint.sh  rsyslog.conf
demo/docker/mailbox/: Dockerfile  entrypoint.sh
demo/docker/mailbox/dovecot/conf.d/: 10-auth.conf  10-master.conf
demo/docker/mailbox/postfix/: main.cf  recipient_access
demo/docker/mailbox2/: Dockerfile
demo/docker/mailbox2/postfix/: main.cf
demo/docker/mailer/: Dockerfile  entrypoint.sh  exim4.conf
demo/docker/mailer/postfix/: main.cf  transport
demo/docker/mailpolicy/: Dockerfile  entrypoint.sh
demo/docker/mailpolicy/postfix/: main.cf  transport
demo/docker/mx/: Dockerfile  entrypoint.sh
demo/docker/mx/postfix/: main.cf  transport
demo/docker/rsyslog/: forward.conf
demo/docker/vector/: vector.yaml
dev/seed/: seed.py
mailtrace/: __init__.py  __main__.py  common.py  config.py  doctor.py  error_handler.py  exceptions.py  flow_check.py  graph.py  log.py  mcp.py  models.py  mx_discovery.py  parser.py  trace.py  utils.py
mailtrace/aggregator/: __init__.py  base.py  opensearch.py  ssh_host.py  utils.py
mailtrace/cli/: __init__.py
mailtrace/cli/graph/: __init__.py  model.py  trace.py
mailtrace/cli/run/: __init__.py  main.py  trace.py
mailtrace/cli/tracing/: __init__.py  main.py
mailtrace/cli/utils/: __init__.py  color.py  password.py  trace_base.py
mailtrace/mcp/: server.py  tools.py
mailtrace/tracing/: __init__.py  continuous.py  delay_builder.py  delay_parser.py  models.py  otel.py  query.py  utils.py
mailtrace/tracing/otel/: __init__.py  context.py  exporter.py  generator.py  span_builders.py  tracer.py
tests/: conftest.py  test_aggregator.py  test_config.py  test_doctor.py  test_e2e.py  test_mx_discovery.py  test_opensearch.py  test_parser.py  test_trace.py  test_utils.py
tests/mcp/: test_flow_check_tool.py  test_input_validation.py  test_server.py  test_tools.py
