[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtrace"
version = "0.2.0"
description = ""
authors = [{ name = "SiriusKoan", email = "me@siriuskoan.one" }]
readme = "README.md"
dependencies = [
    "click>=8.2.1",
    "dnspython>=2.4.0",
    "graphviz>=0.21",
    "mcp>=1.6.0",
    "networkx>=3.5",
    "opensearch-py>=3.0.0",
    "paramiko>=3.5.1",
    "pydot>=4.0.1",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
mailtrace = "mailtrace.__main__:cli"

[dependency-groups]
dev = [
    "mcp[cli]>=1.26.0",
    "pyright>=1.1.402",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests requiring dev OpenSearch (deselected by default)",
]
addopts = "-m 'not e2e'"
filterwarnings = [
    "ignore::UserWarning:opensearchpy",
    "ignore::urllib3.exceptions.InsecureRequestWarning",
]

[tool.ruff]
line-length = 79
src = ["mailtrace"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["mailtrace"]

[tool.pyright]
include = ["mailtrace"]
typeCheckingMode = "basic"
reportMissingImports = "error"

[tool.setuptools.packages.find]
include = ["mailtrace*"]
exclude = ["demo*", "dev*"]

